--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://gingerrrrrrrrrr.github.io/laundry-game",
+  "homepage": ".",
   "name": "laundry-game",
   "version": "0.1.0",
   "private": true,
